# aidsl

./: .gitignore  Makefile  README.md  main.lark  main.py  pai_executor.py  procols.py  pyproject.toml  test.pai
examples/pipeline/: assign_variable.pai  condition.pai  pipeline.pai
expression/: __init__.py  evaluator.py
grammar/: assign.lark  condition.lark  main.lark
src/aidsl/: main.py  pai_executor.py  parser.py
src/aidsl/expression/: evaluator.py
src/aidsl/pai_executor/: __init__.py  pai_executor.py  print_strategy.py  variables_storage.py
src/aidsl/transformer/: __init__.py
tests/integration/: test_pai_executor_integration.py
tests/integration/pai_executor/: test_condition.py  test_var_expression.py
tests/integration/tested_data/: var_condition_print.pai
tests/lib/: pai_executor.py
tests/unit/: test_main.py  test_pai_executor.py  test_pai_executor_unit.py
tests/unit/pai_executor/: test_condition.py
tests/unit/test_data/: test.pai
tests/unit/tested_data/: condition.pai  function.pai  print.pai  set_variable.pai
transformer/: __init__.py  to_python_types.py
