[tool.poetry]
name = "aidsl"
version = "0.1.0"
description = ""
authors = ["Betensis <betensis@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
lark = {extras = ["interegular"], version = "^1.2.2"}


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
